<resources>
    <string name="app_name">My Certificates</string>
    <string name="action_about">About</string>
    <string name="action_show_tips">Show Tips</string>
    <string name="btn_Select_Cert">Inspect Certificate from Store</string>
    <string name="btn_From_File">Inspect Certificate from File</string>
    <string name="section_format">Certificate in chain: %1$d of %2$d</string>
    <string name="Cert_Verify_Error">Could not find verifier.</string>
    <string name="title_activity__view_cert_chain_details">Swipe right to view certificate chain</string>
    <string name="issued_to">Issued to:</string>
    <string name="common_name">Common Name:</string>
    <string name="org_name">Organization:</string>
    <string name="org_unit">Organizational unit:</string>
    <string name="serial_number">Serial number:</string>
    <string name="issued_by">Issued by:</string>
    <string name="validity_period">Validity period:</string>
    <string name="issued_on">Issued on:</string>
    <string name="expires_on">Expires on:</string>
    <string name="fingerprints">Fingerprints:</string>
    <string name="sha256_fingerprint">SHA-256 fingerprint:</string>
    <string name="sha1_fingerprint">SHA-1 fingerprint:</string>
    <string name="key_specs">Key specifications:</string>
    <string name="key_alg">Algorithm:</string>
    <string name="key_size">Size:</string>
    <string name="pub_modulus">Public modulus:</string>
    <string name="pub_exponent">Public exponent:</string>
    <string name="key_usage">Key usage:</string>
    <string name="x509_version">X509 version:</string>
    <string name="alias">Alias:</string>
    <string name="subject">Subject name:</string>
    <string name="issuer_subject">Issuer subject:</string>
    <string name="verified_by">Verified by:</string>
    <string name="sig_alg">Signature Algorithm:</string>
    <string name="signature">Signature:</string>
    <string name="fingerprint_calc_error">Could not calculate fingerprint.</string>
    <string name="about_dialog_title">My Certificates</string>
    <string name="appLogoContentDisc">App Icon</string>
    <string name="appCredit">For more info:\nWesBunton.github.io</string>
    <string name="appIconCredit1">Icons were made by:\nhttp://www.flaticon.com/authors/flat-icons</string>
    <string name="appIconCredit2">See more icons at:\nhttp://www.flaticon.com</string>
    <string name="appIconCredit3">Icons licensed by:\nhttp://creativecommons.org/licenses/by/3.0/</string>
    <string name="set_alias_cert_from_file">N/A - Certificate is not installed</string>
    <string name="certificate_error_title">Certificate Error</string>
    <string name="error_message_convert_pem_cert">Failed to convert PEM data to certificate.</string>
    <string name="p12_password_alert_title">Enter Password</string>
    <string name="p12_password_alert_message">Enter the password to decrypt the certificate file.</string>
    <string name="error_text">Error</string>
    <string name="error_message_general_error">An error parsing the certificate has occurred.</string>
    <string name="cancel_text">Cancel</string>
    <string name="bad_password_exception">PKCS12 key store mac invalid - wrong password or corrupted file.</string>
    <string name="wrong_password_error_title">Wrong Password</string>
    <string name="wrong_password_error_message">Password entered is incorrect.</string>
    <string name="p12_password_hint">P12 Password</string>
    <string name="cn_self_signed_suffix">\t\t(Self-Signed)</string>
    <string name="no_valid_issuer_error_msg">Cannot find valid issuer.</string>
    <string name="EC">EC</string>
    <string name="elliptic_curve">Elliptic Curve</string>
    <string name="inspect_tls_cert_from_url">Inspect TLS Cert From URL</string>
    <string name="alias_header_tls_inspection">Certificate Validity:\n(Not validated against CRL/OCSP)</string>
    <string name="cert_valid">Certificate is valid.</string>
    <string name="cert_expired">Certificate is expired.</string>
    <string name="cert_invalid">Certificate is invalid.</string>
    <string name="cert_not_trusted">Certificate is not trusted.</string>
    <string name="url_hint">https://www.google.com</string>
    <string name="tls_title">TLS Certificate Inspection</string>
    <string name="tls_message">Enter URL to inspect certificate:</string>
    <string name="tls_cancel">Cancel</string>
    <string name="tls_check_cert">Check Certificate</string>
    <string name="error">Error</string>
    <string name="tls_error_empty_url">Please enter a URL</string>
    <string name="tls_error_invalid_url">Invalid URL</string>
    <string name="tls_error_http">URL must be HTTPS protocol.</string>
    <string name="error_msg_retrieve_store">Error occurred in retrieving certificate from store.</string>
    <string name="tip_lock_screen">You may be prompted to enable a lock screen. This is because Android wants to protect your cryptographic keys from unauthorized users.</string>
    <string name="tip_issuer_cert">If an issuer certificate is present, you\'ll be able to see its details as well!</string>
    <string name="tip_file">You can inspect certificates from a local file too. This is helpful for inspecting a certificate prior to installing it. P12, PFX and PEM format certificate files are supported.</string>
    <string name="tip_tls">Inspect a website\'s TLS certificate by typing in the URL.</string>
    <string name="error_retrieve_cert">Unable to retrieve certificate.</string>
    <string name="log_bypassing_ssl_verification">Certificate may be invalid, bypassing the SSL verification just to retrieve the certificate details.</string>
    <string name="pfx_bug_alert_message">So something went wrong in the crypto library while processing your file. To help out, you can email me some description of what happened. Was your file a PFX file from Windows?</string>
    <string name="error_feedback_title">Error Feedback</string>
    <string name="dev_email">wesley.bunton@gmail.com</string>
    <string name="feedback_email_subject">My Certificates Error</string>
    <string name="no_mail_client_error">There are no email clients installed.</string>
    <string name="device_not_supported">This action is not supported on this device.</string>
    <string name="decode_error">Failed to decode PEM data.</string>
    <string name="bc_error_msg">Bouncy Castle has returned a decoding error while trying to read this PEM data.</string>
</resources>
