<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_p12PasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/alert_dialog_horizontal_margin"
        android:layout_marginEnd="@dimen/alert_dialog_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/p12_password_alert_title"/>

    <TextView
        android:id="@+id/txt_p12PasswordMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/alert_dialog_horizontal_margin"
        android:layout_marginEnd="@dimen/alert_dialog_horizontal_margin"
        android:layout_below="@+id/txt_p12PasswordTitle"
        android:text="@string/p12_password_alert_message"/>

    <EditText
        android:id="@+id/editTxt_p12Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/alert_dialog_horizontal_margin"
        android:layout_marginEnd="@dimen/alert_dialog_horizontal_margin"
        android:maxLines="1"
        android:hint="@string/p12_password_hint"
        android:layout_below="@+id/txt_p12PasswordMessage"
        android:inputType="textPassword" />
</RelativeLayout>